# ppd-epc-h3

./: .gitignore  CHANGELOG.md  LICENCES_DATA.md  LICENSE  README.md  ppd-epc-h3.code-workspace  pyproject.toml
pipeline/: 01_ingest_ppd.py  02_ingest_epc.py  03_ingest_ons.py  04_normalise.py  05_match.py  06_enrich_geo.py  07_apply_h3.py  08_build_mart.py  09_ingest_crime.py  10_apply_h3_crime.py  11_aggregate_crime.py  12_ingest_income.py  13_build_price_income_mart.py  config.py  run_all.py
sql/: mart_transactions.sql  match_exact.sql  match_fuzzy.sql  stg_epc.sql  stg_ons.sql  stg_ppd.sql
tests/: test_crime.py  test_h3.py  test_match.py  test_normalise.py
tests/fixtures/: sample_crime.csv  sample_epc.csv  sample_ppd.csv
