[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[project]
name = "ppd-epc-h3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "h3>=3.7",
    "rapidfuzz>=3.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "tqdm>=4.0",
    "click>=8.0",
    "loguru>=0.7",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
